--- a/src/components/broadcast/broadcast.less
+++ b/src/components/broadcast/broadcast.less
@@ -1,23 +1,62 @@
 .broadcast{
   background-color: #0a0c1d;
+  .ant-form-item-label > label{
+    color:#9fa8d0;
+  }
+  .ant-select{
+    color:#9fa8d0;
+  }
+  .ant-select-selection{
+    background-color: #213C95;
+    border: none;
+  }
+  .ant-select-arrow{
+    color: #2CE6F9;
+  }
   .title-broad{
     display: flex;
     align-items: center;
     color: #00ffff;
     background: #142253;
+    .sureBtn{
+      border-radius: 1px;
+      color: #000;
+    }
+    .resetBtn{
+      border-radius: 1px;
+      color: #fff;
+      background-color: #213C95;
+      border: none;
+      margin-left: 16px;
+    }
+    .stopBtn{
+      border-radius: 1px;
+      color: #fff;
+      background-color: #213C95;
+      border: none;
+      margin-left: 16px;
+    }
   }
   .broContext{
     padding: 20px 0;
   }
   .borderBot{
     position: relative;
+    .videoBtn{
+      width: 16%;
+      position: absolute;
+      top:36%;
+      left: 40%;
+      cursor: pointer;
+    }
     .broadcastBott{
       position: absolute;
       left: 0;
       bottom: 0;
       width: 100%;
-      height:36px;
-      background-color:#142745;
+      height:32px;
+      background-color:rgba(20,39,69,0.9);
+      font-size: 14px;
       display: flex;
       align-items: center;
       padding-left: 10px;
@@ -33,8 +72,5 @@
         padding-left: 8px;
       }
     }
-  }
-  .gutter-box img{
-    width: 100%;
   }
 }
