--- a/src/components/homePage/homeModel.less
+++ b/src/components/homePage/homeModel.less
@@ -5,25 +5,36 @@
   .homePageModelLeft{
     border: 2px solid #EEEEEE;
     margin-right: 10px;
+    position: relative;
+    width: 100%;
     .homeageImg{
       display: flex;
       flex-direction: row;
       justify-content: center;
       align-items: center;
       .homeImg{
-        width: 280px;
-        height: 258px;
-        margin-top: 20px;
+        width: 400px;
+        margin-top: 2px;
+        height: 280px;
+        #homeCanvas{
+          width: 100%;
+          height: 100%;
+        }
       }
-      .homeImg img{
-        width: 100%;
+      .homeImg video{
+        width: 96%;
         height: 100%;
+        background-color:#142745;
+        margin-left: 10px;
       }
     }
     .nextHome{
       display: flex;
-      justify-content: flex-end;
+      justify-content:flex-end;
       margin: 9px 8px;
+      position: absolute;
+      bottom: 0;
+      right: 0;
       .nextUp{
         color: #B4B4B4;
         padding: 0 4px;
@@ -36,6 +47,7 @@
         background-color: #B3B3B3;
         border-radius: 50%;
         margin:0 8px;
+        cursor: pointer;
         .cicrle-icon{
           color: #fff;
         }
@@ -47,6 +59,7 @@
         line-height: 20px;
         background-color: #B3B3B3;
         border-radius: 50%;
+        cursor: pointer;
         .cicrle-icon{
           color: #fff;
         }
@@ -79,7 +92,7 @@
         padding-left: 8px;
       }
       .typePolice span:nth-child(3){
-        padding-right: 8px;
+        padding-right: 30px;
       }
       .nameDevice{
         width: 100%;
