--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -343,16 +343,16 @@
               position: absolute;
               top: 34%;
               left: 42%;
-              width: 44px;
-              height: 44px;
+              width: 20%;
+              cursor: pointer;
             }
             .alarmVideoBottom{
               position: absolute;
-              bottom: 0;
+              bottom:6%;
               left: 0;
               width: 100%;
               height: 32px;
-              background-color:#0d3d7b;
+              background-color:rgba(20,39,69,0.8);
               display: flex;
               align-items: center;
               .alarmVideoCircle{
@@ -393,22 +393,22 @@
     .alarminfor-img{
       float: left;
       width: 13%;
-      margin: 20px 0 10px 20px;
+      margin: 10px 0 10px 20px;
       position: relative;
       .alarmVideoBtn{
         position: absolute;
         top: 34%;
         left: 42%;
-        width: 44px;
-        height: 44px;
+        width: 18%;
+        cursor: pointer;
       }
       .alarminforBg{
         position: absolute;
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 32px;
-        background-color: #0a3976;
+        height: 28px;
+        background-color:rgba(20,39,69,0.9);
         display: flex;
         align-items: center;
         .alarminforCirle{
