--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -37,6 +37,7 @@
           .cicrle{
             width: 17px;
             height: 17px;
+            line-height: 17px;
             background-color: #fff;
             border-radius: 50%;
             float: right;
@@ -62,6 +63,7 @@
           .cicrle{
             width: 17px;
             height: 17px;
+            line-height: 17px;
             background-color: #fff;
             border-radius: 50%;
             float: right;
@@ -87,9 +89,11 @@
           .cicrle{
             width: 17px;
             height: 17px;
+            line-height: 17px;
             background-color: #fff;
             border-radius: 50%;
             float: right;
+            text-align: center;
             margin: 7px;
             .cicrle-icon{
               color: #b28850;
@@ -128,6 +132,13 @@
         padding: 20px 20px 0 20px;
         .swiper-container{
           margin-top: 2px;
+          .everyImg{
+            width: 20%;
+          }
+          .swiper-slide img{
+            width: 100%;
+            padding: 0 2%;
+          }
           .prev{
             position: absolute;
             top: 24%;
@@ -147,32 +158,52 @@
             color: #fff;
           }
         }
-        .img-up-fu{
+        .img-up-fu img{
           width: 100%;
-          height: 78%;
-          background: url("../../style/imgs/testl.png") no-repeat;
-          background-size:100% 100%;
-          display: flex;
-          align-items: flex-end;
-          .img-up-fu-word{
+          height: 58%;
+        }
+        .img-up-fu{
+          position: relative;
+          #canvasobj{
             width: 100%;
-            height: 40px;
-            background-color: #0d3b78;
-            opacity:0.5;
+            height: 100%;
+            position: absolute;
+            top:0;
+            left: 0;
+          }
+          .alarmImg{
+            width: 100%;
+            height:278px;
+          }
+          .alarmImg canvas{
+            width: 100%;
+            height: 100%;
+          }
+          .alarmImg img{
+            width: 100%;
+            height: 100%;
+          }
+          .img-up-fu-word{
+            position: absolute;
+            bottom: 0;
+            left:0;
+            width: 100%;
+            height: 36px;
+            background-color:rgba(20,39,69,0.9);
             display: flex;
             align-items: center;
             .img-up-fu-word-span{
               color: #fff;
-              font-size: 13px;
+              font-size: 14px;
               font-family: 黑体;
-             margin-left: 15px;
+              margin-left: 12px;
             }
             .circle{
-              width: 10px;
-              height: 10px;
+              width: 12px;
+              height: 12px;
               border-radius: 50%;
               background-color: #ff7200;
-              margin-left: 30px;
+              margin-left: 24px;
             }
           }
         }
@@ -265,6 +296,7 @@
             .cicrle{
               width: 15px;
               height: 15px;
+              line-height: 15px;
               background-color: #fff;
               border-radius: 50%;
               float: right;
@@ -385,6 +417,7 @@
         .cicrle{
           width: 15px;
           height: 15px;
+          line-height: 15px;
           background-color: #fff;
           border-radius: 50%;
           float: right;
