设备列表渲染完成、添加完成、设置添加带参数跳转 设置页面tab分区、页面重构

--- a/src/style/jhy/less/equipset.less
+++ b/src/style/jhy/less/equipset.less
@@ -2,6 +2,75 @@
   height: 100%;
   padding: 30px;
 
+  .onlyadd {
+    .baseinfo {
+      width: 250px;
+      line-height: 50px;
+      text-align: center;
+      padding: 0 16px;
+      background: #006fe4;
+      border: 1px solid #006fe4;
+      color: #fff;
+      margin-bottom: 20px;
+      border-radius: 2px;
+    }
+  }
+
+  .definfo {
+    border: 1px solid #eeeeee;
+    background: #f8f8f8;
+
+    .infowrap {
+      width: 100%;
+
+      .label {
+        text-align: right;
+        display: inline-block;
+        width: 25%;
+        margin-right: 20px;
+      }
+    }
+
+  }
+
+  .threshold {
+    border: 1px solid #eeeeee;
+    background: #f8f8f8;
+    width: 40%;
+
+    .thresholdtit {
+      .verhorcenter;
+      height: 40px;
+      border-bottom: 1px solid #eeeeee;
+
+    }
+
+    .thresholesetWrap {
+      height: 80px;
+      .verhorcenter;
+
+      .thresholdlabel {
+        border: 1px solid #eeeeee;
+        text-align: center;
+        width: 20%;
+        padding: 4px;
+      }
+
+      .thresholdset {
+        width: 60%;
+
+      }
+
+      .thresholdrest {
+        border: 1px solid #eeeeee;
+        width: 10%;
+        text-align: center;
+        padding: 4px;
+
+      }
+    }
+  }
+
   .verhorcenter {
     display: flex;
     justify-content: center;
@@ -59,109 +128,96 @@
     // position: relative;
   }
 
-  .topwrap {
-    height: 70%;
 
-    .backdrop {
+  .backdrop {
+    display: inline-block;
+    width: 100%;
+    height: auto;
+  }
+
+  // .defsetwrap {
+  //   border: 1px solid #eeeeee;
+  //   background: #f8f8f8;
+
+  //   .defsetit {
+  //     .verhorcenter;
+  //     height: 40px;
+  //   }
+
+  //   .defset {
+  //     height: 40px;
+  //     border: 1px solid #eeeeee;
+  //     .verhorcenter;
+
+  //     .ant-radio-wrapper {
+  //       color: #243f97;
+  //     }
+  //   }
+  // }
+
+  .defopt {
+    height: 622px;
+    border: 1px solid #eeeeee;
+    border-radius: 5px;
+    background: #f8f8f8;
+
+    .optlabel,
+    .optbtn {
       display: inline-block;
-      width: 100%;
-      height: auto;
-    }
-
-    .defopt {
-      height: 622px;
-      border: 1px solid #eeeeee;
-      border-radius: 5px;
-      background: #f8f8f8;
-
-
-    }
-
-    .ant-list-bordered .ant-list-item {
-      height: 70px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    .ant-list-bordered .ant-list-item:hover {
-      color: #fd9c52
-    }
-
-    .defopt::before,
-    .defopt::after {
-      width: 0px;
-      height: 0px;
-      border-width: 12px;
-      border-style: solid;
-      border-color: transparent #f8f8f8 transparent transparent;
-      position: absolute;
-      content: ' ';
-      left: -22px;
-      top: 40px;
-    }
-
-    .defopt::before {
-      border-color: transparent #eeeeee transparent transparent;
-
-      left: -24px;
-      top: 40px;
     }
 
 
+    .optbtn {
+      margin-left: 30px;
 
-    .again {
-      display: block;
-      margin: -80px auto;
-      background: #006fe4;
-      color: #fff;
-    }
-
-    .definfo {
-      height: 622px;
-      border: 1px solid #eeeeee;
-      background: #f8f8f8;
-
-      .infowrap {
-        width: 100%;
-
-        .label {
-          text-align: right;
-          display: inline-block;
-          width: 25%;
-          margin-right: 20px;
-        }
+      .ant-btn {
+        margin-left: 10px;
       }
-
     }
 
   }
 
-  .bottwrap {
-    margin-top: 16px;
-    color: #243f97;
-
-    .defsetwrap {
-      border: 1px solid #eeeeee;
-      background: #f8f8f8;
-
-      .defsetit {
-        .verhorcenter;
-        height: 40px;
-      }
-
-      .defset {
-        height: 40px;
-        border: 1px solid #eeeeee;
-        .verhorcenter;
-
-        .ant-radio-wrapper {
-          color: #243f97;
-        }
-      }
-    }
-
-
+  .ant-list-bordered .ant-list-item {
+    display: flex;
+    flex-direction: row;
+    // justify-content: center;
+    align-items: center;
   }
+
+  .ant-list-bordered .ant-list-item:hover {
+    color: #fd9c52
+  }
+
+  .defopt::before,
+  .defopt::after {
+    width: 0px;
+    height: 0px;
+    border-width: 12px;
+    border-style: solid;
+    border-color: transparent #f8f8f8 transparent transparent;
+    position: absolute;
+    content: ' ';
+    left: -22px;
+    top: 40px;
+  }
+
+  .defopt::before {
+    border-color: transparent #eeeeee transparent transparent;
+
+    left: -24px;
+    top: 40px;
+  }
+
+
+
+  // .again {
+  //   display: block;
+  //   margin: -80px auto;
+  //   background: #006fe4;
+  //   color: #fff;
+  // }
+
+
+
 
 }
