--- a/src/style/jhy/less/equiplist.less
+++ b/src/style/jhy/less/equiplist.less
@@ -9,6 +9,7 @@
     display: block;
   }
 
+
   .elli {
     overflow: hidden;
     text-overflow: clip;
@@ -22,6 +23,21 @@
     overflow: hidden;
   }
 
+  .equipWrap {
+    position: relative;
+
+    .deleteEquip {
+      font-size: 30px;
+      position: absolute;
+      color: #fff;
+      top: 5px;
+      right: 10px;
+      z-index: 10;
+
+    }
+  }
+
+
   .ant-card-body {
     padding: 0;
 
@@ -33,13 +49,13 @@
 
   .tit {
     position: absolute;
-    bottom: 32px;
+    bottom: 45px;
     left: 0;
-    background: rgba(36, 52, 74, 0.3);
+    background: rgba(36, 52, 74, .8);
+    color: #fff;
     width: 100%;
     padding: 1px 4px;
 
-    //  margin: 0;
     .titpoint {
       display: inline-block;
       width: 10px;
@@ -51,7 +67,7 @@
   }
 
   .ant-card-actions>li {
-    margin: 4px 0;
+    margin: 10px 0;
   }
 
   .extra {
