防区部分逻辑v0.0.1

--- a/src/style/jhy/less/equipset.less
+++ b/src/style/jhy/less/equipset.less
@@ -156,7 +156,7 @@
   // }
 
   .defopt {
-    height: 622px;
+    height: 576px;
     border: 1px solid #eeeeee;
     border-radius: 5px;
     background: #f8f8f8;
@@ -180,13 +180,10 @@
   .ant-list-bordered .ant-list-item {
     display: flex;
     flex-direction: row;
-    // justify-content: center;
+    justify-content: center;
     align-items: center;
   }
 
-  .ant-list-bordered .ant-list-item:hover {
-    color: #fd9c52
-  }
 
   .defopt::before,
   .defopt::after {
