--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -395,6 +395,10 @@
       width: 13%;
       margin: 10px 0 10px 20px;
       position: relative;
+      .policeImg{
+        width: 100%;
+        height: 100%;
+      }
       .alarmVideoBtn{
         position: absolute;
         top: 34%;
