--- a/src/components/police/ploceinfomation.css
+++ b/src/components/police/ploceinfomation.css
@@ -1,6 +1,21 @@
 .ploceinfomation {
   background-color: #f0f2f5;
 }
+.ploceinfomation .ant-checkbox-wrapper {
+  color: #fff;
+}
+.ploceinfomation .ant-checkbox {
+  border-radius: 50%!important;
+}
+.ploceinfomation .unhanle {
+  background-color: #006FE3;
+}
+.ploceinfomation .policebg {
+  background-color: #FF7200;
+}
+.ploceinfomation .falsePolicebg {
+  background-color: #B28750;
+}
 .ploceinfomation .ploceinfomation-query {
   height: 60px;
   background-color: #fff;
@@ -8,6 +23,19 @@
   display: flex;
   align-items: center;
   font-size: 14px;
+}
+.ploceinfomation .ploceinfomation-query .choiceEqu {
+  padding-left: 10px;
+}
+.ploceinfomation .ploceinfomation-query .title-checkPolice {
+  background-color: #FF7200;
+  padding: 4px 16px;
+  border-radius: 20px;
+}
+.ploceinfomation .ploceinfomation-query .title-checkReport {
+  background-color: #B28750;
+  padding: 4px 16px;
+  border-radius: 20px;
 }
 .ploceinfomation .ploceinfomation-query .select-camera {
   margin-left: 13px;
@@ -210,6 +238,9 @@
   background-color: #ff7200;
   margin-left: 24px;
 }
+.ploceinfomation .ploceinfomation-main .main-left .main-left-R video {
+  background-color: #020202;
+}
 .ploceinfomation .ploceinfomation-main .main-left .main-left-R {
   height: 360px;
   padding: 20px 20px 0 0;
@@ -359,6 +390,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 .ploceinfomation .ploceinfomation-main .main-right .down .alarmx {
   width: 75%;
@@ -369,6 +401,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 .ploceinfomation .ploceinfomation-update {
   height: 60px;
@@ -429,104 +462,65 @@
 .ploceinfomation .ploceinfomation-update .zdupdate-col .zdupdate .cicrle .cicrle-icon {
   color: #006fe4;
 }
-.ploceinfomation .ploceinfomation-bottom {
-  height: 230px;
-  background-color: #f0f2f5;
-  margin-top: 2px;
-}
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item {
-  height: 230px;
-  width: 20%;
-  background-color: #f0f2f5;
-  float: left;
-}
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 99%;
-  height: 100%;
+.ploceinfomation .gutter-row {
   background-color: #fff;
+  padding: 20px 0;
+  border: 2px solid #F8F8F8;
 }
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img {
-  width: 90%;
-  height: 90%;
-  background: url("../../style/imgs/testl.png") no-repeat;
-  background-size: 100% 100%;
+.ploceinfomation .gutter-row .gutter-box {
+  position: relative;
 }
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .up {
-  width: 100%;
-  height: 50%;
+.ploceinfomation .gutter-row .gutter-box .policeStatus {
+  display: inline-block;
+  padding: 5px 10px;
+  color: #fff;
+  font-size: 13px;
+  border-bottom-right-radius: 20px;
+  border-top-right-radius: 20px;
+  position: absolute;
+  left: 0;
+  bottom: 70%;
 }
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .up .mark {
-  float: left;
-  width: 70px;
-  height: 23px;
-  background-color: #006fe4;
-  margin-top: 10px;
-  border-radius: 0 23px 23px 0;
-  display: flex;
-  align-items: center;
-}
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .up .mark .cicler {
-  width: 8px;
-  height: 8px;
+.ploceinfomation .gutter-row .gutter-box .policeStatus .policeStatusCicle {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
   background-color: #fff;
-  margin-left: 10px;
-}
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .up .mark .word {
-  color: #fff;
-  font-family: 黑体;
-  font-size: 11px;
-  margin-left: 5px;
-}
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .up .time {
-  float: right;
-  width: 130px;
-  height: 20px;
-  background-color: #0b3449;
-  margin-top: 15px;
-  border-radius: 20px ;
   margin-right: 5px;
+}
+.ploceinfomation .gutter-row .gutter-box .policeTimes {
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  bottom: 70%;
+  background-color: rgba(10, 51, 73, 0.8);
+  padding: 2px 10px;
+  color: #fff;
+  border-radius: 20px;
+  font-size: 12px;
+}
+.ploceinfomation .gutter-row .gutter-box .policeBottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 28px;
+  background-color: rgba(19, 36, 64, 0.8);
   display: flex;
   align-items: center;
-  justify-content: center;
 }
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .up .time .tiem-word {
-  font-size: 10px;
-  font-family: 黑体;
-  color: #fff;
-}
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .down {
-  width: 100%;
-  height: 50%;
-  display: flex;
-  align-items: flex-end;
-}
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .down .img-up-fu-word {
-  width: 100%;
-  height: 25px;
-  background-color: #0d3b78;
-  opacity: 0.5;
-  display: flex;
-  align-items: center;
-}
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .down .img-up-fu-word .img-up-fu-word-span {
-  color: #fff;
-  font-size: 10px;
-  font-family: 黑体;
-  margin-left: 5px;
-}
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .down .img-up-fu-word .circle {
-  width: 8px;
-  height: 8px;
+.ploceinfomation .gutter-row .gutter-box .policeBottom .policeCircle {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
   border-radius: 50%;
-  background-color: #ff7200;
-  margin-left: 10px;
+  background-color: #FF7200;
+  margin-left: 18px;
 }
-.ploceinfomation .ploceinfomation-bottom .ploceinfomation-bottom-item .ploceinfomation-bottom-item-inner .ploceinfomation-bottom-item-img .down .img-up-fu-word .icondian {
+.ploceinfomation .gutter-row .gutter-box .policeBottom .policeName {
   color: #fff;
-  margin-left: 55%;
+  padding-left: 8px;
+  font-size: 13px;
 }
 /*# sourceMappingURL=ploceinfomation.css.map */
