--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -1,5 +1,20 @@
 .ploceinfomation{
+  .ant-checkbox-wrapper{
+    color: #fff;
+  }
+  .ant-checkbox{
+    border-radius: 50%!important;
+  }
   background-color: #f0f2f5;
+  .unhanle{
+    background-color: #006FE3;
+  }
+  .policebg{
+    background-color: #FF7200;
+  }
+  .falsePolicebg{
+    background-color: #B28750;
+  }
   .ploceinfomation-query{
     height: 60px;
     background-color: #fff;
@@ -7,6 +22,19 @@
     display: flex;
     align-items: center;
     font-size: 14px;
+    .choiceEqu{
+      padding-left: 10px;
+    }
+    .title-checkPolice{
+      background-color: #FF7200;
+      padding: 4px 16px;
+      border-radius: 20px;
+    }
+    .title-checkReport{
+      background-color: #B28750;
+      padding: 4px 16px;
+      border-radius: 20px;
+    }
     .select-camera{
       margin-left: 13px;
       color: #4159a1;
@@ -208,6 +236,9 @@
           }
         }
       }
+      .main-left-R video{
+        background-color: #020202;
+      }
       .main-left-R{
         height: 360px;
         padding:20px 20px 0 0;
@@ -356,6 +387,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          cursor: pointer;
         }
         .alarmx{
           width: 75%;
@@ -366,6 +398,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          cursor: pointer;
         }
       }
     }
@@ -429,102 +462,64 @@
       }
     }
   }
-  .ploceinfomation-bottom{
-    height: 230px;
-    background-color: #f0f2f5;
-    margin-top: 2px;
-    .ploceinfomation-bottom-item{
-      height: 230px;
-      width: 20%;
-      background-color: #f0f2f5;
-      float: left;
-      .ploceinfomation-bottom-item-inner{
+  .gutter-row{
+    background-color: #fff;
+    padding: 20px 0;
+    border: 2px solid #F8F8F8;
+    .gutter-box{
+      position: relative;
+      .policeStatus{
+        display: inline-block;
+        //background-color: #006CE2;
+        padding: 5px 10px;
+        color: #fff;
+        font-size: 13px;
+        border-bottom-right-radius: 20px;
+        border-top-right-radius:  20px;
+        position: absolute;
+        left: 0;
+        bottom: 70%;
+        .policeStatusCicle{
+          display: inline-block;
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          background-color: #fff;
+          margin-right: 5px;
+        }
+      }
+      .policeTimes{
+        display: inline-block;
+        position: absolute;
+        right: 0;
+        bottom: 70%;
+        background-color: rgba(10,51,73,0.8);
+        padding: 2px 10px;
+        color: #fff;
+        border-radius: 20px;
+        font-size: 12px;
+      }
+      .policeBottom{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 28px;
+        background-color: rgba(19,36,64,0.8);
         display: flex;
-        justify-content: center;
         align-items: center;
-        width: 99%;
-        height: 100%;
-        background-color: #fff;
-        .ploceinfomation-bottom-item-img{
-          width: 90%;
-          height: 90%;
-          background: url("../../style/imgs/testl.png") no-repeat;
-          background-size:100% 100%;
-          .up{
-            width: 100%;
-            height: 50%;
-            .mark{
-              float: left;
-              width: 70px;
-              height: 23px;
-              background-color: #006fe4;
-              margin-top: 10px;
-              border-radius: 0 23px 23px 0;
-              display: flex;
-              align-items: center;
-              .cicler{
-                width: 8px;
-                height: 8px;
-                border-radius: 50%;
-                background-color: #fff;
-                margin-left: 10px;
-              }
-              .word{
-                color: #fff;
-                font-family: 黑体;
-                font-size: 11px;
-                margin-left: 5px;
-              }
-            }
-            .time{
-              float: right;
-              width: 130px;
-              height: 20px;
-              background-color: #0b3449;
-              margin-top: 15px;
-              border-radius:  20px ;
-              margin-right: 5px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              .tiem-word{
-                font-size: 10px;
-                font-family: 黑体;
-                color: #fff;
-              }
-            }
-          }
-          .down{
-            width: 100%;
-            height: 50%;
-            display: flex;
-            align-items: flex-end;
-            .img-up-fu-word{
-              width: 100%;
-              height: 25px;
-              background-color: #0d3b78;
-              opacity:0.5;
-              display: flex;
-              align-items: center;
-              .img-up-fu-word-span{
-                color: #fff;
-                font-size: 10px;
-                font-family: 黑体;
-                margin-left: 5px;
-              }
-              .circle{
-                width: 8px;
-                height: 8px;
-                border-radius: 50%;
-                background-color: #ff7200;
-                margin-left: 10px;
-              }
-              .icondian{
-                color: #fff;
-                margin-left: 55%;
-              }
-            }
-          }
+        .policeCircle{
+          display: inline-block;
+          width: 12px;
+          height: 12px;
+          border-radius: 50%;
+          background-color: #FF7200;
+         margin-left: 18px;
+        }
+        .policeName{
+          color: #fff;
+          padding-left: 8px;
+          font-size: 13px;
         }
       }
     }
