--- a/src/components/homePage/homeModel.less
+++ b/src/components/homePage/homeModel.less
@@ -15,7 +15,7 @@
       .homeImg{
         width: 400px;
         margin-top: 2px;
-        height: 280px;
+        height: 250px;
         #homeCanvas{
           width: 100%;
           height: 100%;
@@ -68,6 +68,13 @@
   }
   .homePageModelRight{
     width: 480px;
+    .sector{
+      background: #006FE4;
+      color: #fff;
+      padding: 4px 8px;
+      margin: 0 4px;
+      border-radius: 30px;
+    }
     .deviceContext{
       padding: 10px;
       border: 2px solid #EEEEEE;
@@ -105,6 +112,10 @@
           border-right:1px solid #dedee2;
           border-left:1px solid #dedee2;
           padding: 0 15px;
+          color: #32419C;
+        }
+        .carBg{
+          color: #C0C0C2;
         }
         .equName{
           display: inline-block;
@@ -116,13 +127,6 @@
           padding-left: 10px;
         }
       }
-    }
-    .deviceContext Button{
-      background: #006EE2;
-      color: #fff;
-      border-radius: 20px;
-      font-size: 12px;
-      margin-top: 16px;
     }
     .alarmImg{
       display: flex;
