--- a/src/style/jhy/less/equipset.css
+++ b/src/style/jhy/less/equipset.css
@@ -104,7 +104,7 @@
   height: auto;
 }
 .equipset .defopt {
-  height: 622px;
+  height: 576px;
   border: 1px solid #eeeeee;
   border-radius: 5px;
   background: #f8f8f8;
@@ -122,10 +122,8 @@
 .equipset .ant-list-bordered .ant-list-item {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
-}
-.equipset .ant-list-bordered .ant-list-item:hover {
-  color: #fd9c52;
 }
 .equipset .defopt::before,
 .equipset .defopt::after {
