--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -373,6 +373,11 @@
       }
     }
   }
+  .nodata{
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+  }
   .alarminfor{
     margin: 12px 0 15px 0;
     .alarminfornikName{
