--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -23,6 +23,10 @@
   .pagination{
     width: 100%;
     text-align: center;
+  }
+  .nodata{
+    display: flex;
+    justify-content: center;
     padding: 20px 0;
   }
   .ploceinfomation-query{
@@ -223,7 +227,7 @@
             left:0;
             width: 100%;
             height: 36px;
-            background-color:rgba(20,39,69,0.9);
+            background-color:rgba(20,39,69,0.5);
             display: flex;
             align-items: center;
             .img-up-fu-word-span{
