--- a/src/components/police/ploceinfomation.css
+++ b/src/components/police/ploceinfomation.css
@@ -24,6 +24,10 @@
 .ploceinfomation .pagination {
   width: 100%;
   text-align: center;
+}
+.ploceinfomation .nodata {
+  display: flex;
+  justify-content: center;
   padding: 20px 0;
 }
 .ploceinfomation .ploceinfomation-query {
@@ -227,7 +231,7 @@
   left: 0;
   width: 100%;
   height: 36px;
-  background-color: rgba(20, 39, 69, 0.9);
+  background-color: rgba(20, 39, 69, 0.5);
   display: flex;
   align-items: center;
 }
