--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -209,6 +209,14 @@
           .alarmImg{
             width:100%;
             height:278px;
+            position: relative;
+            .nodata{
+              width: 74px;
+              height: 105px;
+              position: absolute;
+              top:20%;
+              left: 40%;
+            }
           }
           .alarmImg canvas{
             width: 100%;
